# cdg_api

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: bill_example.rs  cli_example.rs  committee_example.rs  create_endpoint.rs  daily_record.rs  display_all_paths.rs  example.rs  generic_example.rs  generic_matching.rs  manual_endpoint.rs  member_example.rs  raw_json_to_struct.rs
src/: cdg_client.rs  cdg_types.rs  endpoints.rs  lib.rs  main.rs  param_models.rs  response_models.rs  url_builders.rs  url_init.rs
src/client/: cdg_client.rs  cdg_types.rs  mod.rs  url_builders.rs
src/requests/: endpoints.rs  mod.rs  param_chains.rs  param_models.rs
src/response/: response_models.rs
tests/: integration_tests.rs
